--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 26
@@ -32,3 +31,5 @@ dependencies {
 repositories {
     mavenCentral()
 }
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
